---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2020-0-
  Features:
    - Added titanium ore.
    - Added titanium plate.
    - Added titanium gear wheel.
    - Added titanium chest.
    - Added nanobots.
    - Added nanotech technology.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 2020-05-29
  Changes:
    - Separated graphics assets into spicy-teeth-core_assets mod to allow assets
      and functional elements to be updated independently.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2020-05-28
  Changes:
    - Added extended logistics item group.
    - Adjusted smoke colors for refined lubricant recipe.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2020-05-27
  Features:
    - Added aerated lubricant.
    - Added aerated lubricant technology.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020-05-26
  Changes:
    - Added changelog to mod files.
    - Removed sprite source files from mod files to reduce filesize.
---------------------------------------------------------------------------------------------------
Version: 1.1.0 - First release
Date: 2020-05-25
  Features:
    - Added refined lubricant.
    - Added refined lubricant technology.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-05-25
  Features:
    - Added steel gear wheel.
    - Added steel gear wheel recipe to steel processing technology.