@@ -13,6 +13,7 @@ require("prototypes.fluid.aerated-lubricant")
 require("prototypes.fluid.refined-lubricant")
 --  /fluids
 --  items
+require("prototypes.item.nanobots")
 require("prototypes.item.steel-gear-wheel")
 require("prototypes.item.titanium-gear-wheel")
 require("prototypes.item.titanium-ore")
@@ -28,11 +29,14 @@ require("prototypes.recipe.fluid-refined-lubricant")
 --    furnace recipes
 require("prototypes.recipe.furnace-titanium-plate")
 --    item recipes
+require("prototypes.recipe.nanobots")
 require("prototypes.recipe.steel-gear-wheel")
 require("prototypes.recipe.titanium-gear-wheel")
 --  /recipes
 --  technologies
 require("prototypes.technology.aerated-lubricant")
+require("prototypes.technology.lubricant")
+require("prototypes.technology.nanobots")
 require("prototypes.technology.refined-lubricant")
 require("prototypes.technology.steel-processing")
 --  /technologies
