@@ -12,6 +12,7 @@ refined-lubricant=Refined lubricant
 extended-logistics=Extended logistics
 
 [item-name]
+nanobots=Nanobots
 steel-gear-wheel=Steel gear wheel
 titanium-gear-wheel=Titanium gear wheel
 titanium-ore=Titanium ore
@@ -19,8 +20,10 @@ titanium-plate=Titanium plate
 
 [technology-name]
 aerated-lubricant=Aerated lubricant
+nanobots=Nanobots
 refined-lubricant=Refined lubricant
 
 [technology-description]
 aerated-lubricant=Combining petroleum gas with refined lubricant, used to further reduce friction in high speed machines.
+nanobots=Miniaturized robots, used to make high speed machines self-maintain to counter wear and tear.
 refined-lubricant=Combining light oils with lubricant, used to further reduce friction in high speed machines.
