@@ -1,0 +1,16 @@
+data:extend(
+{
+  {
+    type = "recipe",
+    name = "nanobots",
+    ingredients =
+    {
+      {"titanium-plate", 10},
+      {"electronic-circuit", 10},
+      {"electric-engine-unit", 5}
+    },
+    result_count = 5,
+    result = "nanobots"
+  }
+}
+)
